--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Bonezegei (Jofel Batutay)
 maintainer=Jofel Batutay <jofelbatutay@gmail.com>
 sentence=OLED Library
-paragraph=SSD1306 OLED Library
+paragraph=I2C SSD1306 OLED Library
 category=Display
 url=https://github.com/bonezegei/Bonezegei_SSD1306
 architectures=*
